--- a/ZLServerDashboard/Views/Home/Index.cshtml
+++ b/ZLServerDashboard/Views/Home/Index.cshtml
@@ -91,7 +91,7 @@
                 <div class="layui-side-scroll">
                     <div class="layui-logo" lay-href="home/console.html" style="text-align:left;">
                         @* <img src="~/5GN/e534c03c3d4cad7deac51aaa0c41565.png" style="width:60%;" /> *@
-                        <span>联力视频采集</span>
+                        <span>联力视频采集平台</span>
                     </div>
                     <ul class="layui-nav layui-nav-tree" lay-shrink="all" id="LAY-system-side-menu" lay-filter="layadmin-system-side-menu">
 
